# polytwisters

./: .gitattributes  .gitignore  LICENSE  README.md  blender_script.py  blender_wrapper.py  common.py  config.json  cycloplanes.py  export_meshes.py  gui.py  hard_polytwisters.py  introduction.md  main.py  make_gif.py  make_hard_polytwister.py  make_polytwister.py  make_soft_polytwister.py  make_video.py  polytwisters.py  polytwisters_blender.py  pyproject.toml  render_animation.py  soft_polytwisters.py  test_cycloplanes.py
assets/: studio_environment_2k.exr
core/: cadquery_to_svg.py  hard_polytwisters.py  make_hard_polytwister.py  make_soft_polytwister.py  soft_polytwisters.py
research/: cycloplanes.py
scripts/: blender_script.py  blender_wrapper.py  common.py  export_meshes.py  gui.py  make_video.py  notify.py  render_animation.py
src/polytwisters/: hard_polytwister_section.py  hard_polytwisters.py  make_hard_polytwister.py  make_soft_polytwister.py  pipeline.py
src/polytwisters/blender/: blender_script.py  common.py  export_blends.py  make_video.py  render_blends.py
src/polytwisters/core/: all_polytwisters.py  batch.py  common.py  hard_polytwister_section.py  hard_polytwisters.py  soft_polytwister_section.py  soft_polytwisters.py
