[project]
name = "polytwisters"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Ho"},
]
dependencies = [
    "scipy",
    "numpy",
    "cadquery"
]
requires-python = "~=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
hard_section = {call = "polytwisters.hard_polytwister_section:main"}
soft_section = {call = "polytwisters.soft_polytwister_section:main"}
