[project]
name = "polytwisters"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Ho"},
]
dependencies = [
    "scipy",
    "numpy",
    "cadquery",
    "tqdm>=4.66.1",
]
requires-python = "~=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
compute_hard_section = {call = "polytwisters.core.hard_polytwister_section:main"}
compute_soft_section = {call = "polytwisters.core.soft_polytwister_section:main"}
compute_all_sections = {call = "polytwisters.core.batch:main"}
export_blend = {call = "polytwisters.blender.export_blends:main"}
render_blend = {call = "polytwisters.blender.render_blends:main"}
run_full_pipeline = {call = "polytwisters.pipeline:main"}
